--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <h1>SEJITU SITUS DEPO 5K</h1>
     <p>SEJITU merupakan sebuah agen games taruhan online yang bisa dimainkan hanya dengan 5K saja</p>
     <div class="buttons">
-      <a href="#" class="btn">Login</a>
-      <a href="#" class="btn">Daftar</a>
+      <a href="https://cutt.ly/4rWuROdQ" class="btn">Login</a>
+      <a href="https://cutt.ly/4rWuROdQ" class="btn">Daftar</a>
     </div>
   </header>
 
