--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="SEJITU adalah agen games taruhan online yang bisa dimainkan hanya dengan 5K saja. Info slot gacor dan jam hoki!">
+  <meta name="description" content="SEJITU adalah agen games taruhan online yang bisa dimainkan hanya dengan 5K saja. Info slot gacor dan jam hoki!" />
   <meta name="google-site-verification" content="yeY7IXiETl0IYGHJRxv7YbApdWSU2z_DdxNsr__6osQ" />
   <title>SEJITU - Situs Depo 5K</title>
   <link rel="stylesheet" href="style.css" />
